@@ -7,3 +7,4 @@ temp.exp
 *.map
 *.tmp
 *.o
+*.gch
