@@ -20,11 +20,7 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#define NTOS_MODE_USER
-#include <ntos.h>
-#include <windows.h>
-#include <stdarg.h>
-
+#include "advapi32.h"
 #define NDEBUG
 #include <debug.h>
 
